--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 
 <!-- Mirrored from htmldemo.net/flosun/flosun/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Dec 2022 05:03:14 GMT -->
 <head>
-    <meta name="google-site-verification" content="ullgrEff3MMYh-Tv-eCrPu-y4RFRDHFwi1iW6xGP0oE" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5YZ7C57D69"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5YZ7C57D69');
+</script>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Toko Bunga - Alyssa Florist</title>
